fixed min-height bug on layout elements, added min-height to .enhanced role=navigation to make color background stretch, removed commented styles

--- a/meta/styles/master.css
+++ b/meta/styles/master.css
@@ -73,21 +73,21 @@ input:-moz-placeholder {color:#999;}
 input::-webkit-input-placeholder {color:#999;}
 
 /*layout elements and content blocks*/
-[role="banner"],[role="main"],[role="navigation"],[role="contentinfo"] {-webkit-box-sizing:border-box;box-sizing:border-box;display:block;width:100%;min-height:100%;padding:1em 5% 0;}
+[role="banner"],[role="main"],[role="navigation"],[role="contentinfo"] {-webkit-box-sizing:border-box;box-sizing:border-box;display:block;width:100%;padding:1em 5% 0;}
 [role="banner"] {background:#fff;min-height:auto;color:#333;}
 [role="main"] {background:#fff;color:#333;}
 [role="navigation"] {background:#eff1f3;border-bottom:1px solid #d8d8d8;color:#333;}
 [role="contentinfo"] {/*display:block;*/background-color:#eff1f3;border-top:1px solid #d8d8d8;color:#333;padding-bottom:.5em;}
 .reading-view {display:table;font-size:1.2em;line-height:1.625em;/*height:100%;*/min-height:100%;width:100%;}
 .reading-view p {text-indent:1.875em;}
-.pane {display:table-cell;text-align:left;vertical-align:top;/*text-align:center;vertical-align:middle;line-height:13em;*/}
+.pane {display:table-cell;text-align:left;vertical-align:top;}
 .reading.pane {padding-right:3em;}
 
 /*large screen view [default] > 768px (based on 16px browser default)*/
 @media all and (min-width:48em) {
 .control {display:none;}
 body {display:table;}
-[role="navigation"] {display:table-caption;min-height:0;/*-webkit-columns:4 15em;-moz-columns:4 15em;columns:4 15em*/}
+[role="navigation"] {display:table-caption;min-height:0;}
 [role="navigation"] h2 {-webkit-column-span:all;-moz-column-span:all;column-span:all;}
 [role="navigation"] nav {margin-left:-2.5em;-webkit-columns:4 10em;-moz-columns:4 10em;columns:4 10em;}
 [role="contentinfo"] ul {margin-left:-2.5em;}
@@ -97,7 +97,7 @@ body {display:table;}
 @media all and (max-width:48em) {
 [role="banner"],[role="contentinfo"] {display:none;}
 .enhanced [role="main"] {border-right:1px solid #d8d8d8;-webkit-transition:all .25s;transition:all .25s;width:100%;position:absolute;z-index:2;top:0;right:0;}
-.enhanced [role="navigation"] {border:0 none;width:75%;position:absolute;z-index:1;top:0;right:0;}
+.enhanced [role="navigation"] {border:0 none;min-height:100%;width:75%;position:absolute;z-index:1;top:0;right:0;}
 .enhanced .active [role="main"] {-webkit-transform:translateX(-75%);-ms-transform:translateX(-75%);transform:translateX(-75%);}
 .pane {display:block;width:100%;}
 .reading {display:table-caption;}
